--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,6 @@ pendulum = "^3.0.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
